# computer-system-architecture

task1/: CMakeLists.txt  circle.cpp  circle.h  container.cpp  container.h  main.cpp  random.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
task1/tests/: output_test1.txt  output_test2.txt  output_test3.txt  output_test4.txt  output_test5.txt  output_test6.txt  test1.txt  test2.txt  test5.txt
task2/: CMakeLists.txt  circle.cpp  circle.h  container.cpp  container.h  main.cpp  rectangle.cpp  rectangle.h  rnd.h  shape.cpp  shape.h  triangle.cpp  triangle.h
task2/tests/: output_test1.txt  output_test2.txt  output_test3.txt  output_test5.txt  output_test6.txt  test2.txt  test3.txt
task3/: circle.py  color.py  container.py  main.py  rectangle.py  triangle.py
task3/tests/: output_test1.txt  output_test2.txt  output_test3.txt  output_test4.txt  output_test5.txt  output_test6.txt  output_test7.txt  test2.txt  test4.txt  test6.txt  test7.txt
task5/: CMakeLists.txt  main.cpp
